--- a/requirements.txt
+++ b/requirements.txt
@@ -1,21 +1,89 @@
+affine==2.3.1
 asgiref==3.4.1
+asn1crypto==0.24.0
+attrs==22.1.0
+Automat==0.6.0
 autopep8==1.5.7
+blinker==1.4
+certifi==2022.9.24
+chardet==3.0.4
+click==6.7
+click-plugins==1.1.1
+cligj==0.7.2
+cloud-init==22.3.4
+colorama==0.4.5
+command-not-found==0.3
+configobj==5.0.6
+constantly==15.1.0
+cryptography==2.1.4
+distro-info===0.18ubuntu0.18.04.1
 dj-database-url==0.5.0
 Django==3.2.6
+django-widget-tweaks==1.4.11
+et-xmlfile==1.1.0
+ez-setup==0.9
 gunicorn==20.1.0
+httplib2==0.9.2
+hyperlink==17.3.1
+idna==2.6
+incremental==16.10.1
+Jinja2==2.10
+joblib==1.1.1
+jsonpatch==1.16
+jsonpointer==1.10
+jsonschema==2.6.0
+keyring==10.6.0
+keyrings.alt==3.0
+language-selector==0.1
+MarkupSafe==1.0
+netifaces==0.10.4
+numpy==1.19.5
+oauthlib==2.0.6
+openpyxl==3.0.10
+PAM==0.4.2
+pandas==1.1.5
+pexpect==4.2.1
+psycopg2-binary==2.9.3
+pyasn1==0.4.2
+pyasn1-modules==0.2.1
 pycodestyle==2.7.0
+pycrypto==2.6.1
+PyGObject==3.26.1
+PyJWT==1.5.3
+pyOpenSSL==17.5.0
+pyparsing==3.0.9
+pyproj==3.0.1
+pyserial==3.4
+python-apt==1.6.5+ubuntu0.7
+python-dateutil==2.8.2
+python-debian==0.1.32
 python-decouple==3.4
 pytz==2021.1
+pyxdg==0.25
+PyYAML==3.12
+rasterio==1.2.10
+requests==2.18.4
+requests-unixsocket==0.1.5
+scikit-learn==0.24.2
+scipy==1.5.4
+SecretStorage==2.3.1
+service-identity==16.0.0
+six==1.16.0
+sklearn==0.0
+snuggs==1.4.7
+sos==4.4
 sqlparse==0.4.2
+ssh-import-id==5.7
+systemd-python==234
+threadpoolctl==3.1.0
 toml==0.10.2
+Twisted==17.9.0
+typing_extensions==4.1.1
+ubuntu-advantage-tools==27.11.3
+ufw==0.36
+unattended-upgrades==0.1
 Unipath==1.1
+urllib3==1.22
 whitenoise==5.3.0
-django-widget-tweaks=1.4.12
-
-scikit-learn>=1.1.2
-xgboost>=1.6.2
-numpy>=1.23.3
-pandas>=1.5.0
-psycopg2>=2.9.3
-pyproj>=3.4.0
-rasterio>=1.3.3
+xgboost==1.5.2
+zope.interface==4.3.2
